--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,12 @@
     -->
 
     <!-- Using Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Lexend" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Preahvihear" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin" rel="stylesheet">
+
+
     <title>Movie Database</title>
 
   </head>
